syntax = "proto3";

package wso2.discovery.subscription;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/subscription;subscription";
option java_package = "org.wso2.choreo.connect.discovery.subscription";
option java_outer_classname = "APIsProto";
option java_multiple_files = true;

// [#protodoc-title: APIs]

// APIs data model
message APIs {
	string uuid = 1;
	string lcState = 2;
	bool isDefaultVersion = 3;
}
