syntax = "proto3";

package wso2.discovery.config.enforcer;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.gateway.discovery.config.enforcer";
option java_outer_classname = "AmCredentialsProto";
option java_multiple_files = true;

// [#protodoc-title: AMCRED]

// APIM Credentials model
message AmCredentials {
    string username = 1;

    string password = 2;
}
