syntax = "proto3";

package wso2.discovery.config.enforcer;

import "wso2/discovery/config/enforcer/cert.proto";
import "wso2/discovery/config/enforcer/issuer.proto";
import "wso2/discovery/config/enforcer/event_hub.proto";
import "wso2/discovery/config/enforcer/am_credentials.proto";
import "wso2/discovery/config/enforcer/auth_service.proto";
import "wso2/discovery/config/enforcer/jwt_generator.proto";
import "wso2/discovery/config/enforcer/throttling.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.gateway.discovery.config.enforcer";
option java_outer_classname = "ConfigProto";
option java_multiple_files = true;

// [#protodoc-title: Config]

// Enforcer config model
message Config {
    repeated Issuer jwtTokenConfig = 1;

    CertStore keystore = 2;

    CertStore truststore = 3;

    EventHub eventhub = 4;

    AuthService authService = 5;

    AmCredentials apimCredentials = 6;

    JWTGenerator jwtGenerator = 7;

    Throttling throttlingConfig = 8;
}
