syntax = "proto3";

package wso2.discovery.config.enforcer;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.gateway.discovery.config.enforcer";
option java_outer_classname = "EventHubProto";
option java_multiple_files = true;


// [#protodoc-title: EVENTHUB]

// Event hub configuration model
message EventHub {
  // Is Eventhub based resource change detection enabled or not
  bool enabled = 1;

  // Eventhub service url
  // Generally this is APIM server url
  string serviceUrl = 2;

  // Connection parameters for the message listerner
  map<string, string> jmsConnectionParameters = 3;
}
